[workspace.package]
authors = ["dylan@threefold.tech"]
documentation = "https://manual.grid.tf"
edition = "2021"
homepage = "https://threefold.io/"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/threefoldtech/tfchain3"
version = "0.1.0"

[workspace]
members = [
    'tfchain/node',
    'tfchain/runtime',
    'tfchain/support',
    'tfchain/primitives',
    'tfchain/pallets/*',
    'bridge/pallet-tft-bridge'
]

[profile.release]
panic = "unwind"

[workspace.dependencies]
# Build deps
substrate-wasm-builder = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38"}

# External (without extra features and with default disabled if necessary)
base58 = {version = "0.2.0", default-features = false}
bitflags = {version = "1.3.2", default-features = false}
clap = "4.0.9"
codec = {package = "parity-scale-codec", version = "3.1.5", default-features = false}
env_logger = "0.10.0"
futures = {version = "0.3.21", default-features = false}
hex = {version = "0.4.0", default-features = false}
hex-literal = "0.3.4"
jsonrpsee = "0.16.2"
libsecp256k1 = {version = "0.7", default-features = false}
log = "0.4.17"
scale-info = {version = "2.1.1", default-features = false}
serde = { version = "1.0.144", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sha3 = {version = "0.10.0", default-features = false}
smallvec = "1.8.0"
valip = "0.4.0"
lite-json = { version = "0.1", default-features = false }
parking_lot = '0.11'

# Internal pallets
pallet-dao = { path = "tfchain/pallets/pallet-dao", default-features = false }
pallet-grid-contracts = { path = "tfchain/pallets/pallet-grid-contracts", default-features = false }
pallet-kvstore = { path = "tfchain/pallets/pallet-kvstore", default-features = false }
pallet-tfgrid = { path = "tfchain/pallets/pallet-tfgrid", default-features = false }
pallet-tft-price = { path = "tfchain/pallets/pallet-tft-price", default-features = false }

# primitives
node-primitives = { path = "tfchain/primitives", default-features = false }

# Internal support
tfchain-support = { path = "tfchain/support", default-features = false }

# Runtimes
tfchain-runtime = { path = "tfchain/runtime", default-features = false }

# Benchmarking (with default disabled)
frame-system-benchmarking = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}

# Substrate (with default disabled)
frame-benchmarking = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
frame-benchmarking-cli = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
frame-executive = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
frame-support = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
frame-system = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
frame-system-rpc-runtime-api = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
frame-try-runtime = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
frame-election-provider-support = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
pallet-aura = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
pallet-authorship = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
pallet-balances = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
pallet-collective = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
pallet-grandpa = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
pallet-membership = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
pallet-scheduler = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
pallet-session = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
pallet-session-benchmarking = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
pallet-sudo = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
pallet-staking = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
pallet-staking-reward-curve = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
pallet-timestamp = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
pallet-transaction-payment = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
pallet-transaction-payment-rpc = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
pallet-transaction-payment-rpc-runtime-api = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
pallet-treasury = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
pallet-utility = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
pallet-vesting = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
pallet-election-provider-multi-phase = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
pallet-bags-list = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
pallet-multisig = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
pallet-offences = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
pallet-assets = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
pallet-asset-tx-payment = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
sp-api = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
sp-block-builder = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
sp-consensus-aura = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
sp-core = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
sp-inherents = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
sp-io = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
sp-offchain = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
sp-runtime = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
sp-session = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
sp-staking = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
sp-std = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
sp-transaction-pool = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
sp-version = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
sp-storage = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
sp-npos-elections = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.38" }
try-runtime-cli = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
sp-keystore = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}

# Client-only (with default enabled)
polkadot-cli = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38"}
polkadot-primitives = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38"}
polkadot-service = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38"}
sc-basic-authorship = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38"}
sc-chain-spec = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38"}
sc-cli = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38"}
sc-client-api = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38"}
sc-consensus = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38"}
sc-consensus-aura = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38"}
sc-executor = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38"}
sc-finality-grandpa = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38"}
sc-keystore = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38"}
sc-network = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38"}
sc-rpc = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.38" }
sc-rpc-api = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38"}
sc-service = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38"}
sc-sysinfo = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38"}
sc-telemetry = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38"}
sc-tracing = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38"}
sc-transaction-pool = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38"}
sc-transaction-pool-api = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38"}
sp-blockchain = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38"}
sp-consensus = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38"}
sp-finality-grandpa = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38"}
sp-keyring = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38"}
sp-timestamp = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38"}
substrate-build-script-utils = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38"}
substrate-frame-rpc-system = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38"}
substrate-prometheus-endpoint = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38"}