[package]
name = "tfchain-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
name = "tfchain_client"

[dependencies]
codec = {package = "parity-scale-codec", workspace = true, features = ["derive"]}
subxt = "0.27.1"
subxt-codegen = "0.27.1"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros", "time"] }
serde = { workspace = true, features = ["derive"] }

# Substrate stuff
sp-core = { version = "16.0.0", default-features = false }
frame-system = { version = "16.0.0", default-features = false }
sp-std.workspace = true
sp-runtime.workspace = true
sp-io.workspace = true
pallet-balances.workspace = true

[features]
default = ['std']
std = [
    'sp-std/std',
    'sp-runtime/std',
    'sp-io/std',
    'sp-core/std',
    'frame-system/std',
    'pallet-balances/std'
]