[package]
authors.workspace = true
description = "Tfchain primitives"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
name = "node-primitives"
readme.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", workspace = true, features = ["derive"]}
scale-info = { workspace = true, features = ["derive"] }
frame-system.workspace = true
sp-core.workspace = true
sp-runtime.workspace = true

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-system/std",
	"sp-core/std",
	"sp-runtime/std",
]